--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "mapbox-gl": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
